data/usersCode/ferv/question1/error.txt
/home/gauravghati/clash/data/usersCode/ferv/question1/code1-0.cpp:1:1: error: ‘dsvgasdfgsefwaefvsdwef’ does not name a type
 dsvgasdfgsefwaefvsdwef wedf
 ^~~~~~~~~~~~~~~~~~~~~~
